fix: fixed spacing of pills

--- a/src/components/FieldGroup/FieldGroup.module.scss
+++ b/src/components/FieldGroup/FieldGroup.module.scss
@@ -1,8 +1,14 @@
 .field_group {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+
   label {
     display: block;
     color: var(--grey);
     margin-bottom: 8px;
+    width: 100%;
   }
 
   input, select {
